Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -166,33 +166,6 @@
     ]
   },
   {
-    "title": "Sun World và Vietravel hợp tác chiến lược",
-    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
-    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
-        "correct": true
-      },
-      {
-        "text": "Tăng giá vé vào cửa cho du khách.",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng khách tham quan.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tour du lịch trong nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
     "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
     "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
@@ -224,6 +197,37 @@
     ]
   },
   {
+    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
+    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
+    "answers": [
+      {
+        "text": "14 kg",
+        "correct": true
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
     "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
     "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
@@ -250,6 +254,33 @@
       },
       {
         "text": "1.500 cửa hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
+    "answers": [
+      {
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
+        "correct": true
+      },
+      {
+        "text": "Tăng giá vé vào cửa cho du khách.",
+        "correct": false
+      },
+      {
+        "text": "Giảm số lượng khách tham quan.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
         "correct": false
       }
     ]
