Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Slot: 'Thua PSG là trận hay nhất tôi từng tham gia'",
+    "content": "HLV Liverpool, Arne Slot, đã ca ngợi chất lượng trận đấu trong lượt về vòng 1/8 Champions League mặc dù đội nhà thua PSG 0-1. Ông cho rằng đây là trận đấu hay nhất mà ông từng tham gia, mặc dù Liverpool bị loại sau loạt đá luân lưu. Slot cũng thừa nhận rằng đội bóng của ông đã không gặp may mắn trong trận này, nhưng vẫn tự tin vào cơ hội giành hai danh hiệu mùa này. Thủ môn Gianluigi Donnarumma của PSG đã có màn trình diễn xuất sắc trong loạt sút luân lưu, giúp đội bóng tiến vào tứ kết.",
+    "link": "https://vnexpress.net/slot-thua-psg-la-tran-hay-nhat-toi-tung-tham-gia-4860120.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "HLV Arne Slot đã nói gì về trận thua PSG?",
+    "answers": [
+      {
+        "text": "Đây là trận đấu hay nhất mà tôi từng tham gia",
+        "correct": true
+      },
+      {
+        "text": "Chúng tôi đã chơi tệ",
+        "correct": false
+      },
+      {
+        "text": "Trận đấu không quan trọng",
+        "correct": false
+      },
+      {
+        "text": "Chúng tôi không có cơ hội nào",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Cuộc chiến' nhà chồng của phụ nữ Hàn",
     "content": "Bài viết đề cập đến những áp lực và căng thẳng mà phụ nữ Hàn Quốc phải đối mặt khi trở thành con dâu trong gia đình chồng. Nhiều phụ nữ phải chịu đựng kỳ vọng cổ hủ từ mẹ chồng và gia đình chồng, trong khi họ cũng mong muốn sự bình đẳng trong mối quan hệ hôn nhân. Các khảo sát cho thấy mối quan hệ với gia đình chồng có ảnh hưởng lớn đến quyết định kết hôn của cả nam và nữ. Sự thay đổi trong tư duy của thế hệ trẻ hiện nay đang tạo ra những xung đột giữa các giá trị truyền thống và hiện đại.",
     "link": "https://vnexpress.net/cuoc-chien-nha-chong-cua-phu-nu-han-4860095.html",
@@ -202,6 +229,33 @@
     ]
   },
   {
+    "title": "Hai chỉ huy không quân Hàn Quốc bị sa thải sau vụ ném bom nhầm",
+    "content": "Không quân Hàn Quốc đã sa thải hai chỉ huy cấp cao, một đại tá và một trung tá, sau khi xảy ra vụ ném bom nhầm vào một ngôi làng ở Pocheon, khiến 38 người bị thương. Các quan chức này đã bị chỉ trích vì không thực hiện đúng nghĩa vụ giám sát an toàn, dẫn đến sự cố nghiêm trọng này. Tổng tham mưu trưởng không quân Hàn Quốc đã công nhận trách nhiệm và hứa sẽ tìm cách ngăn chặn các sự cố tương tự trong tương lai.",
+    "link": "https://dantri.com.vn/the-gioi/hai-chi-huy-khong-quan-han-quoc-bi-sa-thai-sau-vu-nem-bom-nham-20250311163145371.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao hai chỉ huy không quân Hàn Quốc bị sa thải?",
+    "answers": [
+      {
+        "text": "Vì liên quan đến vụ ném bom nhầm vào ngôi làng",
+        "correct": true
+      },
+      {
+        "text": "Do vi phạm quy định an toàn trong huấn luyện",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không hoàn thành nhiệm vụ giám sát",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do cá nhân không liên quan đến quân đội",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hoa gạo nở đỏ rực trong công viên mang tên cố Tổng Bí thư Lê Duẩn",
     "content": "Công viên mang tên cố Tổng Bí thư Lê Duẩn ở TP Đông Hà đang thu hút sự chú ý của người dân với cây hoa gạo nở đỏ rực vào tháng 3. Cây hoa gạo lâu năm này cao khoảng 10m và có tán rộng, tạo nên khung cảnh đẹp mắt cho công viên. Nhiều người dân đến đây để tập thể dục và thưởng thức vẻ đẹp của hoa gạo, đồng thời tưởng nhớ đến cố Tổng Bí thư Lê Duẩn. Công viên còn có tượng đài của ông, nơi thường diễn ra các sự kiện văn hóa của tỉnh Quảng Trị.",
     "link": "https://tuoitre.vn/hoa-gao-no-do-ruc-trong-cong-vien-mang-ten-co-tong-bi-thu-le-duan-20250310214339709.htm",
@@ -233,37 +287,6 @@
     ]
   },
   {
-    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
-    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
-    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dành cho người lớn tuổi",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho trẻ em",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động ngoài trời",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp dịch vụ mua sắm cao cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
     "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
@@ -290,6 +313,37 @@
       },
       {
         "text": "8 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dành cho người lớn tuổi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động ngoài trời",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -612,6 +666,33 @@
     ]
   },
   {
+    "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
+    "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
+    "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều bệnh nhân từ chối điều trị y tế?",
+    "answers": [
+      {
+        "text": "Do tin tưởng vào thông tin sai lệch trên TikTok",
+        "correct": true
+      },
+      {
+        "text": "Vì họ không có tiền điều trị",
+        "correct": false
+      },
+      {
+        "text": "Bệnh viện quá đông người",
+        "correct": false
+      },
+      {
+        "text": "Họ không tin vào bác sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
     "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
     "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
@@ -638,33 +719,6 @@
       },
       {
         "text": "Philippines",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
-    "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
-    "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều bệnh nhân từ chối điều trị y tế?",
-    "answers": [
-      {
-        "text": "Do tin tưởng vào thông tin sai lệch trên TikTok",
-        "correct": true
-      },
-      {
-        "text": "Vì họ không có tiền điều trị",
-        "correct": false
-      },
-      {
-        "text": "Bệnh viện quá đông người",
-        "correct": false
-      },
-      {
-        "text": "Họ không tin vào bác sĩ",
         "correct": false
       }
     ]
@@ -2645,33 +2699,6 @@
     ]
   },
   {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -2721,6 +2748,33 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
@@ -2873,33 +2927,6 @@
     ]
   },
   {
-    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
-    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
-    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
-    "answers": [
-      {
-        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
-        "correct": true
-      },
-      {
-        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
-        "correct": false
-      },
-      {
-        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh không phải thi nếu không muốn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
     "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
@@ -2922,6 +2949,33 @@
       },
       {
         "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
+    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
+    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
+        "correct": true
+      },
+      {
+        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
+        "correct": false
+      },
+      {
+        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh không phải thi nếu không muốn.",
         "correct": false
       }
     ]
@@ -4484,33 +4538,6 @@
       },
       {
         "text": "48 triệu đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cuộc khủng hoảng hạnh phúc của giới trẻ",
-    "content": "Một báo cáo mới từ Cục nghiên cứu Kinh tế Mỹ cho thấy chỉ số hạnh phúc của giới trẻ đang giảm mạnh, phá vỡ quy luật tuổi tác truyền thống. Thay vì hạnh phúc cao ở tuổi trẻ, giới trẻ hiện nay cảm thấy bất an hơn, đặc biệt do tác động của smartphone và mạng xã hội. Các chuyên gia cảnh báo rằng tình trạng này có thể dẫn đến hậu quả xã hội nghiêm trọng, như tỷ lệ bỏ học tăng cao và năng suất lao động giảm.",
-    "link": "https://vnexpress.net/cuoc-khung-hoang-hanh-phuc-cua-gioi-tre-4859306.html",
-    "cat": "giai-tri",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao chỉ số hạnh phúc của giới trẻ đang giảm?",
-    "answers": [
-      {
-        "text": "Do tác động của smartphone và mạng xã hội.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ có nhiều thời gian rảnh hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không quan tâm đến cuộc sống.",
-        "correct": false
-      },
-      {
-        "text": "Do áp lực từ gia đình và bạn bè.",
         "correct": false
       }
     ]
