Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Việt Nam - Singapore: Thu hút 'phượng hoàng xây tổ'",
+    "content": "Quan hệ Việt Nam - Singapore đang phát triển mạnh mẽ với nhiều cơ hội hợp tác mới trong kỷ nguyên mới, đặc biệt trong bối cảnh Tổng Bí thư Tô Lâm thăm Singapore. Sự hợp tác này không chỉ thúc đẩy thương mại song phương mà còn góp phần vào sự ổn định và phát triển của khu vực ASEAN. Singapore là nhà đầu tư lớn tại Việt Nam, với nhiều dự án và khu công nghiệp đã tạo ra hàng trăm ngàn việc làm, qua đó nâng cao năng lực cạnh tranh của Việt Nam trên trường quốc tế.",
+    "link": "https://tuoitre.vn/viet-nam-singapore-thu-hut-phuong-hoang-xay-to-20250312075918876.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam và Singapore đang phát triển mối quan hệ như thế nào?",
+    "answers": [
+      {
+        "text": "Quan hệ hợp tác kinh tế mạnh mẽ và nhiều cơ hội mới.",
+        "correct": true
+      },
+      {
+        "text": "Đang gặp khó khăn trong thương mại.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi gì đáng kể.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tập trung vào lĩnh vực du lịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhà Trắng khẳng định Mỹ sẽ không suy thoái",
     "content": "Nhà Trắng khẳng định rằng Mỹ sẽ không rơi vào suy thoái, mặc dù thị trường chứng khoán toàn cầu và trong nước đang trải qua sự sụt giảm mạnh. Tổng thống Donald Trump và các quan chức kinh tế của chính phủ tin rằng nền kinh tế sẽ phục hồi và không có dấu hiệu của suy thoái. Họ cho rằng các chính sách thương mại sẽ sớm phát huy hiệu quả, mang lại tăng trưởng cho nền kinh tế Mỹ trong tương lai gần.",
     "link": "https://tuoitre.vn/nha-trang-khang-dinh-my-se-khong-suy-thoai-20250311235959695.htm",
@@ -103,6 +130,33 @@
       },
       {
         "text": "Mỹ đã rơi vào suy thoái.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cú sốc của cô gái khi mẹ sinh tám",
+    "content": "Câu chuyện của Amerah Suleman, cô gái sống tại California, đã gây chú ý khi mẹ cô, Nadya Suleman, sinh cùng lúc 8 đứa trẻ vào năm 2009. Khi đó, Amerah mới 6 tuổi và đã phải trải qua cú sốc lớn khi cuộc sống của gia đình thay đổi hoàn toàn. Sau khi mẹ sinh thêm 8 em bé, gia đình gặp khó khăn tài chính và phải thắt lưng buộc bụng, khiến Amerah cảm thấy tức giận vì không còn được chiều chuộng như trước. Dù gặp nhiều thử thách, cô cùng các em đã học cách thích nghi với cuộc sống đông đúc và áp lực từ truyền thông.",
+    "link": "https://vnexpress.net/cu-soc-cua-co-gai-khi-me-sinh-tam-4860091.html",
+    "cat": "gia-dinh",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Cô gái Amerah Suleman đã trải qua cú sốc gì khi mẹ cô sinh tám đứa em?",
+    "answers": [
+      {
+        "text": "Cô phải đối mặt với cuộc sống thay đổi hoàn toàn.",
+        "correct": true
+      },
+      {
+        "text": "Cô được chiều chuộng hơn trước.",
+        "correct": false
+      },
+      {
+        "text": "Cô không phải làm chị của nhiều em nữa.",
+        "correct": false
+      },
+      {
+        "text": "Cô không gặp phải khó khăn tài chính.",
         "correct": false
       }
     ]
@@ -247,32 +301,32 @@
     ]
   },
   {
-    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
-    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
+    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
+    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
+    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
     "answers": [
       {
-        "text": "14 kg",
+        "text": "1.000 cửa hàng",
         "correct": true
       },
       {
-        "text": "10 kg",
+        "text": "500 cửa hàng",
         "correct": false
       },
       {
-        "text": "20 kg",
+        "text": "2.000 cửa hàng",
         "correct": false
       },
       {
-        "text": "5 kg",
+        "text": "800 cửa hàng",
         "correct": false
       },
       {
-        "text": "8 kg",
+        "text": "1.500 cửa hàng",
         "correct": false
       }
     ]
@@ -309,32 +363,32 @@
     ]
   },
   {
-    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
-    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
-    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
+    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
+    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
     "answers": [
       {
-        "text": "1.000 cửa hàng",
+        "text": "14 kg",
         "correct": true
       },
       {
-        "text": "500 cửa hàng",
+        "text": "10 kg",
         "correct": false
       },
       {
-        "text": "2.000 cửa hàng",
+        "text": "20 kg",
         "correct": false
       },
       {
-        "text": "800 cửa hàng",
+        "text": "5 kg",
         "correct": false
       },
       {
-        "text": "1.500 cửa hàng",
+        "text": "8 kg",
         "correct": false
       }
     ]
@@ -1681,33 +1735,6 @@
     ]
   },
   {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -1734,6 +1761,33 @@
       },
       {
         "text": "Người có bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -2659,6 +2713,33 @@
     ]
   },
   {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -2708,33 +2789,6 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
@@ -4467,37 +4521,6 @@
       },
       {
         "text": "Vì các nhà đầu tư mua vào cổ phiếu mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xe tay ga SYM Naga 150 ra mắt, giá 49,5 triệu đồng",
-    "content": "Xe tay ga SYM Naga 150 đã chính thức ra mắt vào chiều 10/3 với giá 49,5 triệu đồng, mang đến một lựa chọn mới cho thị trường xe ga Việt Nam. Với thiết kế khác biệt, Naga 150 có phong cách thể thao và trang bị nhiều công nghệ hiện đại như phanh đĩa ABS, hệ thống kiểm soát lực kéo, và động cơ 150cc công suất 14,2 mã lực. Mẫu xe này được lắp ráp trong nước và có ba màu sắc lựa chọn: đen, xanh đen, và bạc đen.",
-    "link": "https://vnexpress.net/xe-tay-ga-sym-naga-150-ra-mat-gia-49-5-trieu-dong-4859331.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Xe tay ga SYM Naga 150 có giá bao nhiêu?",
-    "answers": [
-      {
-        "text": "49,5 triệu đồng",
-        "correct": true
-      },
-      {
-        "text": "45 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "50 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "55 triệu đồng",
-        "correct": false
-      },
-      {
-        "text": "48 triệu đồng",
         "correct": false
       }
     ]
